src/scss/_body.scss
@use './styles' as *;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  &::selection {
    background: $secondary-color;
    color: $main-color;
  }
}

body {
  background-color: $main-color;
  @include flex(column, space-between, center);
  height: 100vh;
  width: 100vw;
  font-family: $font-family;
  -webkit-tap-highlight-color: transparent;
}

